# pangram-cli

./: CHANGELOG.md  README.md  pyproject.toml
docs/: CONTEXT.md  DECISIONS.md  IMPLEMENTATION.md
docs/chronicles/: phase-0-mvp.md
pangram_cli/: __init__.py  cli.py
tests/: __init__.py  test_basic.py  test_cli.py
