[project]
name = "pangram-cli"
version = "0.2.0"
description = "CLI tool for detecting AI-generated text using the Pangram Labs API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pangram-sdk",
    "python-dotenv>=1.0",
]

[project.scripts]
pangram = "pangram_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pangram_cli"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.6.0",
    "ruff>=0.1.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
